@@ -1,3 +1,8 @@
+2006-12-24  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/remote_fetcher.rb (Gem::RemoteFetcher#fetch_path):
+	Rescue various errors and return a more-friendly error.
+
 2006-12-23  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/command.rb lib/rubygems/gem_commands.rb: Make help
